# servant-example

./: .gitignore  README.md  package.yaml  servant-example.cabal  stack.yaml
client/: Main.hs
docs/: Main.hs
javascript/: Main.hs
src/: Lib.hs
static/: ui.js
test/: Spec.hs
