name:                servant-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/steshaw/servant-example#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Shaw
maintainer:          steven@steshaw.org
copyright:           (c) 2017, Steven Shaw
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mtl
                     , lucid
                     , servant-server
                     , servant-lucid
                     , time
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-example
  default-language:    Haskell2010

test-suite servant-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-example
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/steshaw/servant-example
